Refactor code, add theme icon & fix mobile view

--- a/contact.html
+++ b/contact.html
@@ -5,26 +5,7 @@
 <my-header title="Contact"></my-header>
 
 <body class="body">
-    <div id="contact">
-        <p style="padding: 6px 0 0 0;">Hello there!</p>
-        <p>Feel free to reach out to me on any of the platforms.</p>
-        <ul>
-            <li>Email: <a target="_blank" href="mailto://muteebakram@gmail.com">muteebakram@gmail.com</a></li>
-            <li>Github: <a target="_blank" href="https://github.com/muteebakram">github.com/muteebakram</a></li>
-            <li>
-                Twitter:
-                <a target="_blank" href="https://www.twitter.com/muteeb_akram/">twitter.com/muteeb_akram</a>
-            </li>
-            <li>
-                LinkedIn:
-                <a target="_blank" href="https://www.linkedin.com/in/muteeb-akram/">linkedin.com/in/muteeb-akram</a>
-            </li>
-            <li>
-                Google Scholar:
-                <a target="_blank"
-                    href="https://scholar.google.com/citations?user=miOm8JMAAAAJ&hl=en">scholar.google.com/citations?user=miOm8JMAAAAJ&hl=en</a>
-            </li>
-        </ul>
-        <p>Thanks for stopping by.</p>
-    </div>
+  <my-contact></my-contact>
 </body>
+
+</html>
