--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
 
 <body class="body">
     <div id="#projects">
-        <my-filters></my-filters>
-        <my-projects projects></my-projects>
+        <my-filter></my-filter>
+        <my-project projects></my-project>
     </div>
 </body>
