--- a/publications.html
+++ b/publications.html
@@ -5,39 +5,7 @@
 <my-header title="Publications"></my-header>
 
 <body class="body">
-    <div id="#publications">
-        <ol>
-            <li>
-                <section class="paper-title">
-                    <a target="_blank"
-                        href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9777199&isnumber=9776641">
-                        A Detail Survey on QUIC and its Impact on Network Data Transmission
-                    </a>
-                </section>
-                2022 6th International Conference on Trends in Electronics and Informatics (ICOEI), Tirunelveli,
-                India, 2022, pp. 378-385, doi: 10.1109/ICOEI53556.2022.9777199.
-                <section class="paper-authors">
-                    <i>Pratiksha Narasimha Nayak G; Nimisha Dey; Neha N; Malavika Hariprasad; Sandhya S; Minal Moharir;
-                        <strong>Muteeb Akram</strong>
-                    </i>
-                </section>
-            </li>
-            <li>
-                <section class="paper-title">
-                    <a target="_blank" href="https://www.irjet.net/archives/V7/i5/IRJET-V7I51018.pdf">
-                        Server Firmware Management using DMTF Redfish REST APIs
-                    </a>
-                </section>
-                May 2020, International Research Journal of Engineering and Technology (IRJET)
-                <section class="paper-authors">
-                    <i><strong>Muteeb Akram Nawaz</strong>, Veena Gadad (Dept. of Computer Science and Engineering,
-                        R V College of Engineering, Karnataka, India)
-                    </i>
-                </section>
-                <section class="paper-subsection">
-                    [ <a href="https://www.dmtf.org/about/academicalliance#redfish">DMTF Redfish Recognition</a> ]
-                </section>
-            </li>
-        </ol>
-    </div>
+  <my-publication></my-publication>
 </body>
+
+</html>
