--- a/education.html
+++ b/education.html
@@ -5,82 +5,7 @@
 <my-header title="Education"></my-header>
 
 <body class="body">
-    <div id="education">
-        <div class="education-section">
-            <div class="education-text">
-                <section class="education-title">Kahlert School of Computing, The University of Utah</section>
-                <section class="degree-title">Master of Science, Computer Science</section>
-                <section class="education-subtitle">
-                    Aug 2023 - May 2025
-                    <br>
-                    Salt Lake City, Utah, USA
-                    <br>
-                    <br>
-                    u1471482@umail.utah.edu
-                </section>
-            </div>
-            <figure style="margin: 0; height: 100%">
-                <img class="education-image" src="./assets/uofu.jpeg" alt="The University of Utah U Statue.">
-                <figcaption>Famous U Statue.</figcaption>
-            </figure>
-        </div>
-        <br>
-        <br>
-        <div class="education-section">
-            <div class="education-text">
-                <section class="education-title">R. V. College of Engineering (RVCE)</section>
-                <section class="degree-title">Bachelor of Engineering, Computer Science & Engineering</section>
-                <section class="education-subtitle">
-                    Aug 2016 - July 2020
-                    <br>
-                    Mysore Road, Bangalore, Karnataka, India
-                    <br>
-                    <br>
-                    muteeban.cs16@rvce.edu.in
-                </section>
-            </div>
-            <figure style="margin: 0; height: 100%">
-                <img class="education-image" src="./assets/rvce.jpg" alt="RVCE Front Entrance.">
-                <figcaption>RVCE Front Gate. ID card is mandatory!</figcaption>
-            </figure>
-        </div>
-        <br>
-        <br>
-        <div class="education-section">
-            <div class="education-text">
-                <section class="education-title">Deeksha Reva Independent PU College</section>
-                <section class="degree-title">Pre-University Education, Computer Science</section>
-                <section class="education-subtitle">
-                    May 2014 - June 2016
-                    <br>
-                    Yelahanka, Bangalore, Karnataka, India
-                </section>
-            </div>
-            <figure style="margin: 0; height: 100%">
-                <img class="education-image" src="./assets/reva.jpeg" alt="Reva PUC Building">
-                <figcaption>Reva PUC building has nice proverbs.</figcaption>
-            </figure>
-        </div>
-        <br>
-        <br>
-        <div class="education-section">
-            <div class="education-text">
-                <section class="education-title">Deepayan Secondary School</section>
-                <section class="degree-title">Kinder Garden, Primary, and High School</section>
-                <section class="education-subtitle">
-                    Jan 2001 - April 2014
-                    <br>
-                    NC Colony, Hospet, Karnataka, India
-                </section>
-            </div>
-            <figure style="margin: 0; height: 100%">
-                <img class="education-image" src="./assets/deepayan.jpeg"
-                    alt="Deepayan Secondary School Building & Ground">
-                <figcaption>Deepayan new building & ground. 2011</figcaption>
-            </figure>
-        </div>
-        <br>
-        <br>
-    </div>
-
+  <my-education></my-education>
 </body>
+
+</html>
