--- a/index.html
+++ b/index.html
@@ -1,87 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <script type="module" src="script.js"></script>
 <my-header title="Home"></my-header>
 
 <body class="body">
-    <div class="page-content">
-        <div class="content-wrap">
-            <div class="about-image">
-                <img class="profile-image" src="./assets/profile-image.jpg" alt="Profile Picture of Muteeb">
-                <div class="about-bio">
-                    <strong>Muteeb Akram Nawaz Doctor</strong>
-                    <br>
-                    Graduate Student & Teaching Assistant
-                    <br>
-                    The University of Utah
-                    <br>
-                    <br>
-                    <br>
-                    <a href="mailto://muteebakram@gmail.com">muteebakram@gmail.com</a>
-                    <br>
-                    Salt Lake City, Utah, USA
-                    <br>
-                    <br>
-                    <br>
-                    <i style="font-size: 12px;">To give anything less than your best is to sacrifice the gift.</i>
-                </div>
-            </div>
-            <div class="about-text">
-                <p>
-                    I'm pursuing graduate studies in Computer Science at the
-                    <a target="_blank" href="https://www.cs.utah.edu">Kahlert School of Computing</a>,
-                    <a target="_blank" href="https://www.utah.edu">University of Utah</a>.
-                    My research interest lies in the intersection of hardware/software of computer systems, i.e.,
-                    computer architecture, operating systems, distributed systems, and embedded systems. Under the
-                    guidance of <a target="_blank" href="https://users.cs.utah.edu/~vijay/index.html">
-                        Prof. Vijay Nagarajan</a>,
-                    my research focuses on re-imagining applications on CXL Memory. Additionally, I serve as a teaching
-                    assistant, helping senior undergraduate students in their capstone projects.
-                </p>
-                <p>
-                    Before Utah, I was part of the Cloud & Compute Team at <a href="https://www.cisco.com">Cisco
-                        Systems</a>
-                    in Bangalore, India. I started as a college intern and progressed to the role of Software Engineer 2
-                    before leaving. While there, I worked on cutting-edge enterprise hardware and
-                    implemented industry-standard
-                    <a target="_blank" href="https://www.dmtf.org/standards/redfish">DMTF Redfish APIs</a>
-                    for diagnosing hardware, updating firmware, disk data
-                    sanitization, and installing operating systems for
-                    <a target="_blank"
-                        href="https://www.cisco.com/site/us/en/products/computing/servers-unified-computing-systems/index.html">
-                        Cisco UCS servers</a>.
-                    My experience at Cisco marked my introduction to the software industry.
-                    I found immense joy in tackling technical challenges and developed a keen interest in
-                    systems.
-                </p>
-                <p>
-                    Before Cisco, I did my Bachelor's in Computer Science at
-                    <a target="_blank" href="https://rvce.edu.in">R. V. College of Engineering (RVCE)</a> in
-                    Bangalore, India. I worked with Prof. Rajashree Shettar, Prof. Minal Moharir, and Prof. Veena Gadad
-                    on the traffic decongestion system, HTTP3/QUIC protocol survey, and server firmware
-                    management, respectively. Additionally, I was a member of the
-                    <a target="_blank" href="https://ecellrvce.in">Entrepreneurship Cell</a> and a volunteer for
-                    the Rotaract Club of RVCE.
-                </p>
-                <p>
-                    Before RVCE, I did my pre-university education with Deeksha Integrated Learning at
-                    <a target="_blank" href="https://www.revapucollege.edu.in/yelahanka/about-yelahanka">
-                        Reva Independent PU College</a>, Bangalore, India. It is here where I learned how to study and
-                    the importance of
-                    education and hard work. The passion and support of the teachers here truly inspired me.
-                </p>
-                <p>
-                    It all started at <a target="_blank" href="https://deepayanschool.com">Deepayan School</a>, Hospet,
-                    India.
-                </p>
-                <p>
-                    I'm forever grateful to my mother, father, younger brother, sister, well-wishers, and teachers for
-                    their unconditional love, guidance, and support.
-                </p>
-            </div>
-        </div>
-        <my-footer></my-footer>
-    </div>
+  <my-home></my-home>
+  <my-footer showCopyright showLastUpdated></my-footer>
 </body>
 
 </html>
