Add google analystics and fix header hover

--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <script type="module" src="script.js"></script>
-<my-header title="Contact"></my-header>
+<my-header pageTitle="Contact"></my-header>
 
 <body class="body">
   <my-contact></my-contact>
