--- a/education.html
+++ b/education.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <script type="module" src="script.js"></script>
-<my-header title="Education"></my-header>
+<my-header pageTitle="Education"></my-header>
 
 <body class="body">
   <my-education></my-education>
