--- a/experience.html
+++ b/experience.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <script defer type="module" src="script.js"></script>
-<my-header title="Experience"></my-header>
+<my-header pageTitle="Experience"></my-header>
 
 <body class="body">
   <my-experience></my-experience>
