--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 
 <script type="module" src="script.js"></script>
 <script type="module" src="multi-select-dropdown.js"></script>
-<my-header title="Projects"></my-header>
+<my-header pageTitle="Projects"></my-header>
 
 <body class="body">
     <div id="#projects">
