--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <script type="module" src="script.js"></script>
-<my-header title="Home"></my-header>
+<my-header pageTitle="Home"></my-header>
 
 <body class="body">
   <my-home></my-home>
