--- a/publications.html
+++ b/publications.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <script type="module" src="script.js"></script>
-<my-header title="Publications"></my-header>
+<my-header pageTitle="Publications"></my-header>
 
 <body class="body">
   <my-publication></my-publication>
