--- a/contact.html
+++ b/contact.html
@@ -2,9 +2,18 @@
 <html lang="en">
 
 <script type="module" src="script.js"></script>
-<my-header pageTitle="Contact"></my-header>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1W01HG67P1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() {
+    dataLayer.push(arguments);
+  }
+  gtag("js", new Date());
+  gtag("config", "G-1W01HG67P1");
+</script>
 
 <body class="body">
+  <my-header pageTitle="Contact"></my-header>
   <my-contact></my-contact>
 </body>
 
