--- a/experience.html
+++ b/experience.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <script defer type="module" src="script.js"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1W01HG67P1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() {
+    dataLayer.push(arguments);
+  }
+  gtag("js", new Date());
+  gtag("config", "G-1W01HG67P1");
+</script>
 <my-header pageTitle="Experience"></my-header>
 
 <body class="body">
