--- a/projects.html
+++ b/projects.html
@@ -3,11 +3,18 @@
 
 <script type="module" src="script.js"></script>
 <script type="module" src="multi-select-dropdown.js"></script>
-<my-header pageTitle="Projects"></my-header>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1W01HG67P1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() {
+    dataLayer.push(arguments);
+  }
+  gtag("js", new Date());
+  gtag("config", "G-1W01HG67P1");
+</script>
 
 <body class="body">
-    <div id="#projects">
-        <my-filter></my-filter>
-        <my-project projects></my-project>
-    </div>
+    <my-header pageTitle="Projects"></my-header>
+    <my-filter></my-filter>
+    <my-project projects></my-project>
 </body>
