--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,7 @@
 <body class="body">
   <my-header pageTitle="Contact"></my-header>
   <my-contact></my-contact>
+  <my-footer showCopyright></my-footer>
 </body>
 
 </html>
