--- a/education.html
+++ b/education.html
@@ -15,6 +15,7 @@
 <body class="body">
   <my-header pageTitle="Education"></my-header>
   <my-education></my-education>
+  <my-footer showCopyright></my-footer>
 </body>
 
 </html>
