--- a/experience.html
+++ b/experience.html
@@ -15,7 +15,7 @@
 
 <body class="body">
   <my-experience></my-experience>
-  <my-footer showTop></my-footer>
+  <my-footer showCopyright showTop></my-footer>
 </body>
 
 </html>
