--- a/projects.html
+++ b/projects.html
@@ -17,4 +17,5 @@
     <my-header pageTitle="Projects"></my-header>
     <my-filter></my-filter>
     <my-project projects></my-project>
+    <my-footer showCopyright showTop></my-footer>
 </body>
