--- a/publications.html
+++ b/publications.html
@@ -15,6 +15,7 @@
 <body class="body">
   <my-header pageTitle="Publications"></my-header>
   <my-publication></my-publication>
+  <my-footer showCopyright></my-footer>
 </body>
 
 </html>
