Personal portfolio website Muteeb Akram

--- a/experience.html
+++ b/experience.html
@@ -11,7 +11,7 @@
   gtag("js", new Date());
   gtag("config", "G-1W01HG67P1");
 </script>
-<my-header pageTitle="Experience" pageSubTitle="3.5 years"></my-header>
+<my-header pageTitle="Experience"></my-header>
 
 <body class="body">
   <my-experience></my-experience>
